--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body class="stackedit">
   <div class="stackedit__html"><h1 id="import-component">Import component</h1>
+  <h4 id="repo--zba-shared">repo : zba-shared</h4>
 <ul>
 <li>
 <p>No need to add the Import component inside a dialog—the Import component itself displays a dialog.</p>
